src/chrome/komodo/skin/partials/scheme-skinning.less
.setVars() when (@dark = 1)
{
    @_background:           lighten(@background, 5%);
    
    @foreground-focus:      lighten(@foreground, 20%);
    @background-contrast:   darken(@_background, 10%);
    @border:                lighten(@_background, 5%);
    @background-button:     lighten(desaturate(@_background, 5%), 5%);
    @background-button-hover:lighten(desaturate(@_background, 5%), 2%);
    @background-image-button:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
    @background-odd:        fade(darken(@background-contrast, 3%), 80%);
    @background-input:      lighten(@background-contrast, 10%);
    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
    @background-selected:   fade(desaturate(@special, 2%), 30%);
    
    @background-scrollbar:          @background;
    @background-scrollbar-thumb:    darken(@background, 4%);
    @background-scrollbar-thumb-hover: darken(@background, 8%);
    @background-scrollbar-hover:    lighten(@background, 5%);
}

.setVars() when (@dark = 0)
{
    @_background:           darken(@background, 5%);
    
    @foreground-focus:      darken(@foreground, 10%);
    @background-contrast:   darken(@_background, 5%);
    @border:                darken(@_background, 10%);
    @background-button:     lighten(@_background, 10%);
    @background-button-hover:lighten(@_background, 15%);
    @background-odd:        fade(darken(@background-contrast, 1%), 80%);
    @background-input:      darken(@background-contrast, 10%);
    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
    @background-image-button:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
    @background-selected:   desaturate(@special, 5%);
    
    @background-scrollbar:          @background;
    @background-scrollbar-thumb:    darken(@background, 12%);
    @background-scrollbar-thumb-hover: darken(@background, 20%);
    @background-scrollbar-hover:    darken(@background, 5%);
}

.setVars();

@foreground-selected:   contrast(@background-selected);
@special-fore: contrast(@special);

/* Hud */

.hud
{
    background-image: @background-image !important;
    background-color: fade(@background-contrast, 90%) !important;
    color: @foreground !important;
    border-color: @border !important;

    separator
    {
        -moz-appearance: none !important;
        height: 1px !important;
        max-height: 1px !important;
        background: fade(@border, 50%) !important;
    }

    .docked
    {
        background: fade(@border, 50%) !important;
    }

    .special
    {
        background: @special !important;
        color: @special-fore !important;
    }

    richlistitem,
    listitem,
    row
    {
        color: @foreground !important;
        border-color: fade(@border, 0%) !important;

        &[selected="true"]
        {
            color: @foreground-selected !important;
            background: @background-selected !important;
        }

        &[focused]:not([selected="true"])
        {
            color: @foreground-focus !important;
            border-color: @border !important;
        }
    }

    .loader
    {
        background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, @special 200px, @special 300px, rgba(0,0,0,0.0) 500px) !important;
    }

    textbox:not(.transparent)
    {
        background: @background-input !important;
    }

    textbox
    {
        color: @foreground !important;
    }

    ::-moz-selection {
        color: @special-fore !important;
        background: @special;
    }
    
    :not(button) > button:not(.button-plain)
    {
        background-color: @background-button !important;
        background-image: @background-image-button !important;
        border: 1px solid @border !important;

        &:hover
        {
            background-color: @background-button-hover !important;
        }
    }

    button:not(.button-plain)
    {
        color: @foreground !important;
    }
}

.hud scrollbar,
view[type="editor"] scrollbar
{
    border: 0;
    background: transparent;

    slider
    {
        -moz-appearance: none !important;
        border: 0;
        background: @background-scrollbar !important;
    }

    thumb
    {
        -moz-appearance: none;
        background: @background-scrollbar-thumb !important;
        border: 0;
    }

    thumb:hover
    {
        -moz-appearance: none;
        background: @background-scrollbar-thumb-hover !important;
    }

    &:hover
    {
        slider
        {
            -moz-appearance: none;
            background: @background-scrollbar-hover !important;
        }
    }
    
    &[orient="vertical"]
    {
        width: 15px;
    }
    
    &[orient="horizontal"]
    {
        height: 15px;
    }
}

/* Statusbar */

window:not([view-type="editor"])
{
    statusbar#statusbarviewbox
    {
        visibility: collapse;
    }
}

statusbar#statusbarviewbox
{
    -moz-appearance: none !important;
    background: @_background !important;
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)) !important;
    color: @foreground !important;
    border: 0 !important;
    border-top: 1px solid contrast(@_background, darken(@_background, 10%), lighten(@_background, 10%)) !important;

    statusbarpanel
    {
        -moz-appearance: none !important;
        background: transparent !important;
        border: 0 !important;
        padding: 0 2px 0 !important;
    }


    /* Statusbar Buttons */

    button:not([type="menu"]),
    sectionlist,
    toolbarbutton
    {
        -moz-appearance: none !important;
        background: transparent;
        color: @foreground !important;
        border: 0;
        border-radius: 0 !important;

        margin: 0;
        padding: 0 2px !important;

        & > label
        {
            color: @foreground !important;
        }

        &:hover
        {
            background: fade(darken(@_background, 5%), 60%) !important;
            color: lighten(@foreground, 10%) !important;
        }
    }

    sectionlist textbox
    {
        -moz-appearance: none !important;
        background: lighten(@_background, 5%) !important;
        color: @foreground !important;
        border: 0 !important;
        
        & > hbox
        {
            -moz-appearance: none !important;
            background: transparent !important;
        }
    }

    .statusbar-resizerpanel
    {
        visibility: collapse;
    }

}

#quicklaunch
{
    border: 0;
    background-image: none !important;
}

